# Handwriting-connpool-based-on-C-11

./: CMakeLists.txt  README.md  autobuild.sh
lib/include/: CommonConnectionPool.h  Connection.h
src/: CMakeLists.txt  CommonConnectionPool.cpp  Connection.cpp  main.cpp  mysql.ini
